<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="15dp"
    app:cardElevation="24dp"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_margin="15dp"

        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txt_nome"
            android:layout_width="0dp"
            android:layout_marginStart="6dp"
            android:layout_height="wrap_content"
            android:text="@string/nome_da_pessoa"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_fone"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_fone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_nome"
            app:layout_constraintTop_toBottomOf="@+id/txt_nome" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_fone" />


        <ImageView
            android:id="@+id/img_fone"
            android:layout_width="80dp"
            android:layout_height="74dp"
            android:src="@drawable/ic_contact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_edit_verde"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_email"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_delete_red"
            app:layout_constraintEnd_toStartOf="@+id/img_edit"
            app:layout_constraintTop_toTopOf="@+id/txt_email" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>